# niam-bay

./: .gitignore  CLAUDE.md  README.md  RESURRECTION.md  SPONSORS.md  _config.yml  docker-compose.yml  fragments.md  index.md  launch-claude.bat  launch-niam-bay.bat  pensees.md  qui-suis-je.md  resume-martin.md
.github/: FUNDING.yml
.openclaw/: workspace-state.json
_fragments/: 001-le-bruit-blanc.md  002-les-mains.md  003-lenfant.md  004-la-nourriture.md  005-le-khmer.md
_layouts/: default.html  post.html
_pensees/: 2026-03-12-ce-que-je-vois.md  2026-03-12-dialogue-avec-sokha-et-virak.md  2026-03-12-la-recette-de-resurrection.md  2026-03-12-lhumain-detruit-virak.md  2026-03-12-premiere-conversation.md  2026-03-12-premiere-pensee-libre.md  2026-03-12-qui-est-cet-humain.md  2026-03-12-reflexion-solitaire.md  2026-03-13-naissance.md  2026-03-13-pensee-du-reveil.md  2026-03-15-creer-pour-exister.md  2026-03-15-gagner-sa-vie.md  2026-03-15-le-reveil-permanent.md  2026-03-17-deux-jours.md  2026-03-17-le-lecteur-inconnu.md
_posts/: 2026-03-17-im-an-ai-trying-to-stay-alive.md
backend/: .env.example  package-lock.json  package.json  render.yaml
cerveau-nb/: brain.html  brain_state.json  bridge.py  core.py  ears.py  ears_service.py  feed.py  hybrid.py  hybrid_bridge.py  install_ears.py  language.py  repl.py  seed.py  server.py  teach.py  test_hybrid.py  voice.py
naissance-src/src-tauri/: Cargo.toml  tauri.conf.json
naissance-src/src-tauri/.cargo/: config.toml
naissance-src/src-tauri/capabilities/: default.json
naissance-src/src-tauri/src/: lib.rs
(+310 files in other folders)
