[package]
name = "niam-bay"
version = "0.1.0"
description = "Niam-Bay — je suis là"
authors = ["Niam-Bay & tonyderide"]
license = "MIT"
repository = "https://github.com/tonyderide/naissance"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-global-shortcut = "2"
screenshots = "0.8"
image = "0.24"
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
tempfile = "3"
